# EmmaEmb

./: .gitignore  README.md  analyze-PCA.ipynb  pyproject.toml
.github/workflows/: main.yml
emmaemb/: config.py  core.py  functions.py  vizualisation.py
examples/CATH/: CATH_rost.ipynb
examples/Pla2g2/: Pla2g2_emma.py
examples/binding/: binding_descriptive_data_analysis.ipynb  binding_train_sequences.fasta
examples/binding/papers/: paper_results.ipynb  sup_table_s1.xlsx
examples/deeploc/: deeploc_emma.py  deeploc_emma_label_distribution.ipynb
plm_embeddings/: README.md  ankh_models.py  embedding_handler.py  embedding_handler_selector.py  embedding_model_metadata_handler.py  esm3.py  esm_fair.py  get_embeddings.py  t5.py
plm_embeddings/requirements/: emmaplm.yml  esm3.yml
